feat: implement JWT authentication and database migrations